--- a/TWJieShuQuan/main.storyboard
+++ b/TWJieShuQuan/main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="McA-zT-FMQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="McA-zT-FMQ">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -279,23 +279,45 @@
                                                 </mask>
                                             </variation>
                                         </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xbz-Yo-zG5">
-                                            <rect key="frame" x="10" y="49" width="280" height="30"/>
-                                            <color key="backgroundColor" red="0.80392156859999997" green="0.80392156859999997" blue="0.80392156859999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
-                                            <state key="normal" title="同意">
-                                                <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xbz-Yo-zG5">
+                                            <rect key="frame" x="0.0" y="66" width="299.5" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="4B8-Du-js2"/>
+                                            </constraints>
+                                            <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="6"/>
+                                            <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="-9" maxY="0.0"/>
+                                            <inset key="imageEdgeInsets" minX="-14" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            <state key="normal" title="同意" image="Agreed">
+                                                <color key="titleColor" red="0.46274509803921571" green="0.85882352941176465" blue="0.49019607843137253" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </state>
                                             <connections>
                                                 <action selector="agreeToBorrow:" destination="ZN0-4H-XbT" eventType="touchUpInside" id="4e9-nA-VR0"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ftV-Y5-f2d">
-                                            <rect key="frame" x="310" y="49" width="280" height="30"/>
-                                            <color key="backgroundColor" red="0.80392156859999997" green="0.80392156859999997" blue="0.80392156859999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
-                                            <state key="normal" title="暂不方便">
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wpu-3l-5LO" userLabel="Divder">
+                                            <rect key="frame" x="0.0" y="57" width="600" height="0.5"/>
+                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="0.5" id="WMh-ry-nRy"/>
+                                            </constraints>
+                                        </view>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DQj-dx-xhI">
+                                            <rect key="frame" x="300" y="63.5" width="0.5" height="30"/>
+                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="0.5" id="3DP-7g-tjL"/>
+                                                <constraint firstAttribute="height" constant="30" id="Gox-RB-1Mv"/>
+                                            </constraints>
+                                        </view>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ftV-Y5-f2d">
+                                            <rect key="frame" x="300" y="66" width="299.5" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="SrF-dd-Mx1"/>
+                                            </constraints>
+                                            <inset key="contentEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="6"/>
+                                            <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="-9" maxY="0.0"/>
+                                            <inset key="imageEdgeInsets" minX="-14" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            <state key="normal" title="暂不方便" image="Cancel">
                                                 <color key="titleColor" red="0.98039215690000003" green="0.074509803920000006" blue="0.074509803920000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                             </state>
@@ -305,16 +327,21 @@
                                         </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="ftV-Y5-f2d" firstAttribute="top" secondItem="Xbz-Yo-zG5" secondAttribute="top" id="JDF-c1-1l6"/>
-                                        <constraint firstItem="Xbz-Yo-zG5" firstAttribute="top" secondItem="QLO-9r-oAv" secondAttribute="bottom" constant="15" id="Pnl-xM-Klz"/>
+                                        <constraint firstAttribute="trailing" secondItem="Wpu-3l-5LO" secondAttribute="trailing" id="1WO-la-Pjp"/>
+                                        <constraint firstItem="Wpu-3l-5LO" firstAttribute="leading" secondItem="YCz-hS-iB2" secondAttribute="leading" id="4U7-ID-nY5"/>
+                                        <constraint firstItem="Xbz-Yo-zG5" firstAttribute="leading" secondItem="YCz-hS-iB2" secondAttribute="leading" id="Dic-uT-8GQ"/>
+                                        <constraint firstAttribute="bottom" secondItem="DQj-dx-xhI" secondAttribute="bottom" constant="3" id="HFA-Dq-LFu"/>
                                         <constraint firstAttribute="centerX" secondItem="QLO-9r-oAv" secondAttribute="centerX" id="QhN-ej-nPS"/>
                                         <constraint firstAttribute="trailing" secondItem="QLO-9r-oAv" secondAttribute="trailing" constant="10" id="QlA-uj-6j2"/>
-                                        <constraint firstItem="ftV-Y5-f2d" firstAttribute="width" secondItem="Xbz-Yo-zG5" secondAttribute="width" id="ccJ-Px-QcW"/>
+                                        <constraint firstAttribute="bottom" secondItem="ftV-Y5-f2d" secondAttribute="bottom" id="Xae-k9-tiC"/>
+                                        <constraint firstAttribute="bottom" secondItem="Xbz-Yo-zG5" secondAttribute="bottom" id="Zly-Ue-jZ6"/>
+                                        <constraint firstAttribute="centerX" secondItem="DQj-dx-xhI" secondAttribute="centerX" id="avY-iT-Aos"/>
+                                        <constraint firstItem="ftV-Y5-f2d" firstAttribute="leading" secondItem="Xbz-Yo-zG5" secondAttribute="trailing" constant="1" id="b1f-4W-irU"/>
+                                        <constraint firstItem="Xbz-Yo-zG5" firstAttribute="top" secondItem="Wpu-3l-5LO" secondAttribute="bottom" constant="8" id="cdM-Ph-Um9"/>
+                                        <constraint firstItem="Xbz-Yo-zG5" firstAttribute="width" secondItem="ftV-Y5-f2d" secondAttribute="width" id="dvd-3P-RXa"/>
                                         <constraint firstItem="QLO-9r-oAv" firstAttribute="leading" secondItem="YCz-hS-iB2" secondAttribute="leading" constant="10" id="hnL-e8-fqB"/>
                                         <constraint firstItem="QLO-9r-oAv" firstAttribute="top" secondItem="YCz-hS-iB2" secondAttribute="topMargin" constant="8" id="ljg-2j-cUr"/>
-                                        <constraint firstItem="ftV-Y5-f2d" firstAttribute="leading" secondItem="Xbz-Yo-zG5" secondAttribute="trailing" constant="20" id="nbH-jX-B5g"/>
-                                        <constraint firstItem="Xbz-Yo-zG5" firstAttribute="leading" secondItem="YCz-hS-iB2" secondAttribute="leading" constant="10" id="oS4-Ct-AV7"/>
-                                        <constraint firstAttribute="trailing" secondItem="ftV-Y5-f2d" secondAttribute="trailing" constant="10" id="q87-EL-aFv"/>
+                                        <constraint firstAttribute="trailing" secondItem="ftV-Y5-f2d" secondAttribute="trailing" id="zL4-zb-PgK"/>
                                     </constraints>
                                     <variation key="default">
                                         <mask key="constraints">
@@ -1847,8 +1874,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Agreed" width="11" height="9"/>
         <image name="BookIcon" width="20" height="24"/>
         <image name="BookIcon_Select" width="20" height="24"/>
+        <image name="Cancel" width="11" height="10"/>
         <image name="FindIcon" width="25" height="23"/>
         <image name="FindIcon_Select" width="25" height="23"/>
         <image name="MeIcon" width="15" height="26"/>
