--- a/TWJieShuQuan/LaunchViewController.xib
+++ b/TWJieShuQuan/LaunchViewController.xib
@@ -24,12 +24,13 @@
                     <rect key="frame" x="0.0" y="520" width="600" height="80"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BT8-pB-82g">
-                            <rect key="frame" x="44" y="25" width="46" height="30"/>
+                            <rect key="frame" x="25" y="20" width="70" height="40"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="46" id="AIM-fk-m6C"/>
-                                <constraint firstAttribute="height" constant="30" id="vp0-v2-G9Z"/>
+                                <constraint firstAttribute="width" constant="70" id="AIM-fk-m6C"/>
+                                <constraint firstAttribute="height" constant="40" id="vp0-v2-G9Z"/>
                             </constraints>
                             <state key="normal" title="注册">
+                                <color key="titleColor" red="0.27450980392156865" green="0.61568627450980395" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
@@ -37,10 +38,10 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZoC-4a-65a">
-                            <rect key="frame" x="510" y="25" width="46" height="30"/>
+                            <rect key="frame" x="505" y="20" width="70" height="40"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="46" id="PXr-4c-Fvk"/>
-                                <constraint firstAttribute="height" constant="30" id="ptN-pf-E50"/>
+                                <constraint firstAttribute="width" constant="70" id="PXr-4c-Fvk"/>
+                                <constraint firstAttribute="height" constant="40" id="ptN-pf-E50"/>
                             </constraints>
                             <state key="normal" title="登陆">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -52,8 +53,8 @@
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="ZoC-4a-65a" secondAttribute="trailing" constant="44" id="LVP-qW-WLj"/>
-                        <constraint firstItem="BT8-pB-82g" firstAttribute="leading" secondItem="VHn-2s-0Ja" secondAttribute="leading" constant="44" id="bk6-Tw-TYX"/>
+                        <constraint firstAttribute="trailing" secondItem="ZoC-4a-65a" secondAttribute="trailing" constant="25" id="LVP-qW-WLj"/>
+                        <constraint firstItem="BT8-pB-82g" firstAttribute="leading" secondItem="VHn-2s-0Ja" secondAttribute="leading" constant="25" id="bk6-Tw-TYX"/>
                         <constraint firstAttribute="centerY" secondItem="BT8-pB-82g" secondAttribute="centerY" id="e0x-Sr-PfO"/>
                         <constraint firstItem="BT8-pB-82g" firstAttribute="centerY" secondItem="ZoC-4a-65a" secondAttribute="centerY" id="gPL-EG-zkT"/>
                     </constraints>
