--- a/TWJieShuQuan/Authentication/Controllers/LoginViewController.xib
+++ b/TWJieShuQuan/Authentication/Controllers/LoginViewController.xib
@@ -30,7 +30,7 @@
                                     <constraints>
                                         <constraint firstAttribute="width" constant="362" id="gGv-iW-ziO"/>
                                     </constraints>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="textColor" red="0.3294117647" green="0.68627450980000004" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                     <variation key="default">
@@ -57,7 +57,7 @@
                                     <constraints>
                                         <constraint firstAttribute="width" constant="362" id="oSi-tG-FIf"/>
                                     </constraints>
-                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="textColor" red="0.3294117647" green="0.68627450980000004" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
                                     <variation key="default">
