--- a/TWJieShuQuan/Authentication/Controllers/LoginViewController.xib
+++ b/TWJieShuQuan/Authentication/Controllers/LoginViewController.xib
@@ -93,7 +93,7 @@
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="E24-t7-k00" userLabel="登陆">
                             <rect key="frame" x="76" y="160" width="263" height="38"/>
-                            <color key="backgroundColor" red="0.32941176470588235" green="0.68627450980392157" blue="0.92549019607843142" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="backgroundColor" red="0.32941176470588235" green="0.68627450980392157" blue="0.92549019607843142" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="263" id="Dov-BS-cfF"/>
                                 <constraint firstAttribute="height" constant="38" id="Rvm-gy-YyY"/>
